[artf578738]: Fixed Alignment issues in Phresco 2.0 new theme

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/photon_theme.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/photon_theme.css
@@ -278,6 +278,7 @@ body {
 
 .tblheader {
     background-color: #323232;
+    color: white;
 }
 
 table th, table td {
